# grpc-gateway

.bcr/: metadata.template.json  presubmit.yml  source.template.json
e2e/bzlmod/: BUILD.bazel  MODULE.bazel  calculator.proto  go.mod  helloworld.proto
