"""
This module sets a local override of the grpc-gateway project to simulate its usage 
as an external module.
"""

bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "grpc_ecosystem_grpc_gateway",
    path = "../..",
)

bazel_dep(name = "rules_proto", version = "7.1.0", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.53.0", dev_dependency = True, repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True, repo_name = "bazel_gazelle")
