"""
This module sets a local override of the grpc-gateway project to simulate its usage 
as an external module.
"""

bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "grpc_ecosystem_grpc_gateway",
    path = "../..",
)

bazel_dep(name = "rules_proto", version = "7.1.0", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.53.0", dev_dependency = True, repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True, repo_name = "bazel_gazelle")

bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = ":go.mod")
use_repo(
    go_deps,
    "org_golang_google_genproto_googleapis_api",
)
